cmake_minimum_required(VERSION 3.0)
project(client)
file(GLOB_RECURSE DIR_SRCS "*.c")
file(GLOB_RECURSE REMOVE_FILES "${CMAKE_BINARY_DIR}/CMakeFiles/*")
list(REMOVE_ITEM DIR_SRCS ${REMOVE_FILES})

include_directories(../lib)
link_directories("../common")
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../)
add_executable(cx_client ${DIR_SRCS})
target_link_libraries(cx_client unp)
